<resources>
    <string name="app_name">goodboi</string>
    <string name="login">Connexion</string>
    <string name="id">Identifiant</string>
    <string name="email">Email</string>
    <string name="subscription">Inscription</string>
    <string name="connect">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="confirmPassword">Confirmation mot de passe</string>
    <string name="alreadyAccount">Déjà un compte ? Connexion</string>
    <string name="noAccount">Pas encore de compte ? Inscription</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="pathDog">C:\Users\lecom\Documents\Prog\M1 III\S2\dev mobile\Projet\goodboi\img\golder-retriever-puppy.jpeg</string>
    <string name="like">Like</string>
    <string name="dog">Dog</string>
    <string name="classement">Classement</string>
    <string name="profile">Profil</string>
    <string name="profilePicture">Photo de profil</string>
    <string name="swipe">Swipe</string>
    <string name="takePicture">Prendre une photo</string>
    <string name="logout">Logout</string>
    <string name="position">Votre position</string>
    <string name="empty"></string>
</resources>